Resolve merge conflicts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <meta property="og:description" content="A premium beauty studio experience with expert nails and permanent jewellery services.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Gold%20permanent%20bracelet.jpg">
-  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -40,13 +40,16 @@
         </div>
       </nav>
 
-      <div class="header-meta">
+            <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
           <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
           <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
         <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
@@ -60,7 +63,7 @@
         <div class="hero-copy">
           <span class="eyebrow">Established beauty services</span>
           <h1 class="hero-title">Luxury nails and permanent jewellery &mdash; crafted by Georgie Rose.</h1>
-          <p class="lead">BIAB, gel polish and gel extensions alongside welded bracelets, anklets and necklaces in one calm, premium studio experience.</p>
+          <p class="lead">BIAB, gel polish and gel extensions alongside welded bracelets, anklets and rings in one calm, premium studio experience.</p>
           <div class="btn-group">
             <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
             <a class="btn btn-secondary" href="nails.html">Explore Nails</a>
@@ -100,7 +103,7 @@
             <img src="assets/images/Jewellery/Holding%20hands%20with%20bracelets.jpg" alt="Matching permanent bracelets" loading="lazy" decoding="async" width="900" height="700">
             <h3>Permanent Jewellery</h3>
             <ul>
-              <li>Welded bracelets, anklets, necklaces and rings</li>
+              <li>Welded bracelets, anklets and rings</li>
               <li>Private appointments, pop-ups and event bookings</li>
               <li>Meaningful keepsakes for weddings and milestones</li>
             </ul>
@@ -112,11 +115,15 @@
 
     <section class="section">
       <div class="container about-grid">
-        <article class="card">
-          <h2 class="section-title">About Georgie</h2>
-          <p class="section-intro">Elysium By Georgie Rose blends refined nail artistry with premium permanent jewellery in one welcoming setting.</p>
-          <p class="muted">Known for meticulous detail and a calm, friendly experience, Georgie works closely with each client to create a finished look that feels both elevated and wearable.</p>
-          <p class="muted">From everyday BIAB appointments to welded keepsake jewellery, every service is delivered with thoughtful care and personal attention.</p>
+        <article class="card about-copy">
+          <h2 class="section-title">About Georgie Rose</h2>
+          <p class="section-intro">Georgie has been creating permanent jewellery for over a year, welcoming hundreds of happy clients and many repeat visitors back into the studio.</p>
+          <p class="muted">After studying design, she developed a strong eye for detail and finish. Every bracelet, charm and nail set is carefully checked before it leaves, so the final result feels polished, personal and made to last.</p>
+          <ul class="info-list">
+            <li>Permanent jewellery specialist for over a year</li>
+            <li>Hundreds of happy clients, with many repeat visits</li>
+            <li>Every bracelet, charm and nail is checked before you leave</li>
+          </ul>
         </article>
         <div>
           <img class="about-photo" src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Georgie at a wedding fair pop-up setup" loading="lazy" decoding="async" width="900" height="760">
@@ -154,10 +161,10 @@
             <h3>Anklets</h3>
             <p>Elegant anklets designed for comfortable everyday wear.</p>
           </a>
-          <a class="card service-card" href="jewellery.html#necklaces">
+          <a class="card service-card" href="jewellery.html#rings">
             <span class="service-type">Permanent Jewellery</span>
-            <h3>Necklaces</h3>
-            <p>Welded necklace fittings with refined options for layering and keepsakes.</p>
+            <h3>Rings</h3>
+            <p>Minimal welded rings with a smooth, refined finish for daily wear.</p>
           </a>
         </div>
       </div>
@@ -207,7 +214,7 @@
         <div class="testimonial-controls">
           <div>
             <h2 class="section-title">Client reviews</h2>
-            <p class="section-intro">Trusted by clients booking both nails and permanent jewellery appointments.</p>
+            <p class="section-intro">Recent Google feedback from permanent jewellery appointments.</p>
           </div>
           <a class="btn btn-ghost" data-google-reviews-link href="https://share.google/EBIZEN8UOwQqzRysz">Read more reviews on Google</a>
         </div>
@@ -217,22 +224,37 @@
 
     <section class="section">
       <div class="container social-layout">
-        <article class="callout">
+        <article class="callout social-copy">
           <h2 class="section-title">Follow along</h2>
-          <p class="section-intro">See recent sets, welded pieces and event moments.</p>
-          <p class="muted">Instagram embeds load only when this section scrolls into view for faster page performance.</p>
+          <p class="section-intro">See fresh nail sets, welded pieces and behind-the-scenes moments from the studio and pop-ups.</p>
+          <p class="muted">Social is the quickest way to catch new availability, upcoming events, and the latest chain and charm arrivals.</p>
+          <ul class="social-bullets">
+            <li>Recent nail and permanent jewellery work</li>
+            <li>Pop-up announcements and travel updates</li>
+            <li>Wedding keepsake highlights and client favourites</li>
+          </ul>
           <div class="btn-group">
-            <a class="btn btn-secondary" data-social-link="instagram" href="#">View on Instagram</a>
-            <a class="btn btn-ghost" data-social-link="facebook" href="#">Follow on Facebook</a>
+            <a class="btn btn-secondary" data-social-link="instagram" href="#">Follow on Instagram</a>
+            <a class="btn btn-ghost" data-social-link="tiktok" href="#">Follow on TikTok</a>
           </div>
         </article>
 
         <aside class="social-shell" data-social-embed>
-          <h3>Recent posts</h3>
-          <p class="embed-status" data-embed-status>Loading social content when visible...</p>
-          <div class="embed-content" data-embed-content></div>
+          <h3>Latest from social</h3>
+          <div class="embed-stack">
+            <article class="social-embed-card">
+              <h4>Instagram</h4>
+              <p class="embed-status" data-embed-status>Loading Instagram posts...</p>
+              <div class="embed-content" data-embed-content></div>
+            </article>
+            <article class="social-embed-card">
+              <h4>TikTok</h4>
+              <p class="embed-status" data-tiktok-status>Loading TikTok profile...</p>
+              <div class="tiktok-content" data-tiktok-content></div>
+            </article>
+          </div>
           <div class="hidden stack" data-embed-fallback>
-            <div class="embed-fallback-grid" aria-label="Instagram fallback gallery">
+            <div class="embed-fallback-grid" aria-label="Social fallback gallery">
               <img src="assets/images/Jewellery/Blue%20bracelet%20%26%20charm.jpg" alt="Blue bracelet and charm detail" loading="lazy" decoding="async" width="600" height="600">
               <img src="assets/images/Jewellery/Pearl%20and%20heart%20bracelets.jpg" alt="Pearl and heart bracelet pairing" loading="lazy" decoding="async" width="600" height="600">
               <img src="assets/images/Nails/Cat%20nails.jpg" alt="Cat themed nail art" loading="lazy" decoding="async" width="600" height="600">
@@ -240,7 +262,10 @@
               <img src="assets/images/Jewellery/Silver%20chains%20in%20low%20light.jpg" alt="Silver chain options" loading="lazy" decoding="async" width="600" height="600">
               <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Pink French nails with bow" loading="lazy" decoding="async" width="600" height="600">
             </div>
-            <a class="btn btn-ghost" data-social-link="instagram" href="#">View on Instagram</a>
+            <div class="embed-fallback-actions">
+              <a class="btn btn-secondary" data-social-link="instagram" href="#">Follow on Instagram</a>
+              <a class="btn btn-ghost" data-social-link="tiktok" href="#">Follow on TikTok</a>
+            </div>
           </div>
           <p class="notice hidden" data-social-config-prompt></p>
         </aside>
@@ -329,12 +354,12 @@
     </section>
   </main>
 
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
         <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
-        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <address data-location-text>Base: 15 Young Street, Cheadle. Georgie travels for pop-ups and may be coming to your area soon.</address>
         <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
@@ -346,20 +371,24 @@
         <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Service links</strong>
+        <strong>Services</strong>
         <a href="nails.html#biab">BIAB</a>
         <a href="nails.html#gel-polish">Gel Polish</a>
         <a href="nails.html#gel-extensions">Gel Extensions</a>
-        <a href="jewellery.html#bracelets">Bracelets</a>
-        <a href="jewellery.html#events">Pop-ups and events</a>
+        <a href="jewellery.html#bracelets">Welded Bracelet</a>
+        <a href="jewellery.html#anklets">Welded Anklet</a>
+        <a href="jewellery.html#rings">Welded Ring</a>
       </div>
       <div class="footer-links">
-        <strong>Social</strong>
+        <strong>Policies and social</strong>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="cookies.html">Cookies Policy</a>
+        <a href="accessibility.html">Accessibility</a>
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
-        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
-        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
+        <a data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
   </footer>
@@ -368,3 +397,9 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
