--- a/jewellery.html
+++ b/jewellery.html
@@ -1,15 +1,15 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Permanent Jewellery | Elysium By Georgie Rose</title>
-  <meta name="description" content="Permanent welded bracelets, anklets, rings and necklaces, plus event pop-ups and wedding keepsake jewellery.">
+  <meta name="description" content="Permanent welded bracelets, anklets and rings, plus event pop-ups and wedding keepsake jewellery.">
   <meta property="og:title" content="Permanent Jewellery | Elysium By Georgie Rose">
   <meta property="og:description" content="Book custom-fitted welded jewellery appointments, events and keepsake experiences.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg">
-  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -40,13 +40,16 @@
         </div>
       </nav>
 
-      <div class="header-meta">
+            <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
           <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
           <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
         <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
@@ -60,7 +63,7 @@
         <div class="hero-copy">
           <span class="eyebrow">Permanent Jewellery</span>
           <h1 class="hero-title">Permanent Jewellery</h1>
-          <p class="lead">Welded bracelets, anklets, necklaces and rings custom-fitted for meaningful everyday wear.</p>
+          <p class="lead">Welded bracelets, anklets and rings custom-fitted for meaningful everyday wear.</p>
           <div class="btn-group">
             <a class="btn btn-primary" data-book-link href="contact.html">Book jewellery</a>
             <a class="btn btn-ghost" data-social-link="instagram" href="#">Message on Instagram</a>
@@ -88,7 +91,7 @@
           <article class="timeline-step">
             <p class="timeline-number">Step 01</p>
             <h3 class="timeline-title">Choose your chain</h3>
-            <p class="muted">Select a style and tone that suits your look, with optional charm additions where available.</p>
+            <p class="muted">Select a style and tone that suits your look and preferred finish.</p>
           </article>
           <article class="timeline-step">
             <p class="timeline-number">Step 02</p>
@@ -112,31 +115,19 @@
     <section class="section">
       <div class="container">
         <h2 class="section-title">Jewellery options</h2>
-        <p class="section-intro">Service options for appointments, gifting and keepsake moments.</p>
+        <p class="section-intro">Permanent jewellery services currently offered.</p>
         <div class="grid grid-3">
           <article id="bracelets" class="card">
-            <h3>Bracelets</h3>
-            <p class="muted">A classic starting point with delicate or statement chains.</p>
+            <h3>Welded Bracelet</h3>
+            <p class="muted">A timeless everyday piece, measured to your exact fit.</p>
           </article>
           <article id="anklets" class="card">
-            <h3>Anklets</h3>
-            <p class="muted">Lightweight welded anklets with a premium, clean finish.</p>
-          </article>
-          <article id="necklaces" class="card">
-            <h3>Necklaces</h3>
-            <p class="muted">Neckline-focused fittings for subtle daily wear or layered styling.</p>
+            <h3>Welded Anklet</h3>
+            <p class="muted">Lightweight anklets with a neat, polished welded finish.</p>
           </article>
           <article id="rings" class="card">
-            <h3>Rings</h3>
-            <p class="muted">Minimal welded ring options for a modern, continuous look.</p>
-          </article>
-          <article id="charms" class="card">
-            <h3>Charms</h3>
-            <p class="muted">Add personalised details where suitable for your selected chain.</p>
-          </article>
-          <article class="card">
-            <h3>Private bookings</h3>
-            <p class="muted">Ideal for pairs, groups and meaningful milestone appointments.</p>
+            <h3>Welded Ring</h3>
+            <p class="muted">Minimal, modern ring fittings for subtle continuous wear.</p>
           </article>
         </div>
       </div>
@@ -193,12 +184,8 @@
         </article>
         <article class="callout">
           <h3>Where to find me</h3>
-          <p class="muted">Upcoming pop-up schedules are shared first on social channels.</p>
-          <ul class="info-list">
-            <li>Check Instagram for live event announcements</li>
-            <li>Message directly for private pop-up enquiries</li>
-            <li>Partnership bookings are available for selected dates</li>
-          </ul>
+          <p class="muted">Studio-based at 15 Young Street, Cheadle, with pop-up and travel dates announced on social channels.</p>
+          <p class="muted">Georgie may be coming to your area soon, so follow along for updates or message directly to enquire.</p>
           <div class="btn-group">
             <a class="btn btn-secondary" data-social-link="instagram" href="#">See upcoming dates</a>
             <a class="btn btn-ghost" href="contact.html">Enquire about a pop-up</a>
@@ -212,11 +199,11 @@
         <article class="card">
           <h2 class="section-title">Weddings and keepsakes</h2>
           <p class="section-intro">A premium keepsake experience for bridal parties and meaningful celebrations.</p>
-          <p class="muted">Wedding jewellery appointments can be tailored for intimate groups or larger guest experiences, with options discussed during enquiry.</p>
+          <p class="muted">Wedding packages are available in a range of sizes with varying discounts, and bridal party bookings are always welcome.</p>
           <ul class="info-list">
-            <li>Pre-wedding fittings for bridal parties</li>
-            <li>On-the-day keepsake moments</li>
-            <li>Gift-focused pair and group bookings</li>
+            <li>Flexible package options with varying discounts</li>
+            <li>Bridal party appointments available</li>
+            <li>A few complimentary surprises included by Georgie</li>
           </ul>
         </article>
         <img class="about-photo" src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Wedding fair jewellery pop-up" loading="lazy" decoding="async" width="900" height="760">
@@ -237,12 +224,12 @@
     </section>
   </main>
 
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
         <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
-        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <address data-location-text>Base: 15 Young Street, Cheadle. Georgie travels for pop-ups and may be coming to your area soon.</address>
         <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
@@ -254,20 +241,24 @@
         <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Service links</strong>
+        <strong>Services</strong>
         <a href="nails.html#biab">BIAB</a>
         <a href="nails.html#gel-polish">Gel Polish</a>
         <a href="nails.html#gel-extensions">Gel Extensions</a>
-        <a href="jewellery.html#bracelets">Bracelets</a>
-        <a href="jewellery.html#events">Pop-ups and events</a>
+        <a href="jewellery.html#bracelets">Welded Bracelet</a>
+        <a href="jewellery.html#anklets">Welded Anklet</a>
+        <a href="jewellery.html#rings">Welded Ring</a>
       </div>
       <div class="footer-links">
-        <strong>Social</strong>
+        <strong>Policies and social</strong>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="cookies.html">Cookies Policy</a>
+        <a href="accessibility.html">Accessibility</a>
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
-        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
-        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
+        <a data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
   </footer>
@@ -276,3 +267,9 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
