--- a/policies/privacy.html
+++ b/policies/privacy.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
@@ -8,8 +8,8 @@
   <meta property="og:title" content="Privacy Policy | Elysium By Georgie Rose">
   <meta property="og:description" content="Overview of data collection, use and rights.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="../assets/images/final-logo.jpg">
-  <link rel="icon" href="../assets/images/final-logo.jpg">
+  <meta property="og:image" content="../assets/images/curlogo.png">
+  <link rel="icon" type="image/png" href="../assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="../index.html">
-        <img class="brand-mark" src="../assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <img class="brand-mark" src="../assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -38,7 +38,18 @@
           <a href="../contact.html">Contact / Book</a>
         </div>
       </nav>
-      <div class="header-meta">
+            <div class="header-meta">
+        <div class="social-inline" aria-label="Social links">
+          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
+          </a>
+        </div>
         <a class="btn btn-primary" data-book-link href="../contact.html">Book / Enquire</a>
       </div>
     </div>
@@ -83,7 +94,7 @@
         <article class="card">
           <h2>Your rights</h2>
           <p class="muted">You can request access, correction or deletion of your personal data at any time via email.</p>
-          <p><a href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></p>
+          <p><a href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></p>
         </article>
       </div>
     </section>
@@ -96,12 +107,12 @@
     </section>
   </main>
 
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
         <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
-        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <address data-location-text>Base: 15 Young Street, Cheadle. Georgie travels for pop-ups and may be coming to your area soon.</address>
         <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
@@ -113,16 +124,24 @@
         <a href="../contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Policies</strong>
-        <a href="privacy.html">Privacy</a>
-        <a href="cookies.html">Cookies</a>
-        <a href="accessibility.html">Accessibility</a>
+        <strong>Services</strong>
+        <a href="../nails.html#biab">BIAB</a>
+        <a href="../nails.html#gel-polish">Gel Polish</a>
+        <a href="../nails.html#gel-extensions">Gel Extensions</a>
+        <a href="../jewellery.html#bracelets">Welded Bracelet</a>
+        <a href="../jewellery.html#anklets">Welded Anklet</a>
+        <a href="../jewellery.html#rings">Welded Ring</a>
       </div>
       <div class="footer-links">
-        <strong>Social</strong>
+        <strong>Policies and social</strong>
+        <a href="../privacy.html">Privacy Policy</a>
+        <a href="../cookies.html">Cookies Policy</a>
+        <a href="../accessibility.html">Accessibility</a>
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
+        <a data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
   </footer>
@@ -131,3 +150,9 @@
   <script src="../assets/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
