--- a/privacy.html
+++ b/privacy.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Weddings and Keepsakes | Elysium By Georgie Rose</title>
-  <meta name="description" content="Wedding keepsake jewellery experiences by Elysium By Georgie Rose.">
-  <meta property="og:title" content="Weddings and Keepsakes | Elysium By Georgie Rose">
-  <meta property="og:description" content="Premium welded jewellery keepsake moments for bridal parties and celebrations.">
+  <title>Privacy Policy | Elysium By Georgie Rose</title>
+  <meta name="description" content="How Elysium By Georgie Rose handles personal information from website enquiries and bookings.">
+  <meta property="og:title" content="Privacy Policy | Elysium By Georgie Rose">
+  <meta property="og:description" content="Information on enquiry data, processing and contact rights.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg">
+  <meta property="og:image" content="assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,6 +27,7 @@
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
         </span>
       </a>
+
       <nav class="nav-shell" aria-label="Primary">
         <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
         <div class="nav-backdrop" data-nav-backdrop></div>
@@ -38,7 +39,8 @@
           <a href="contact.html">Contact / Book</a>
         </div>
       </nav>
-            <div class="header-meta">
+
+      <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
           <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
@@ -57,39 +59,60 @@
 
   <main id="main-content">
     <section class="hero">
-      <div class="container hero-shell">
-        <div class="hero-copy">
-          <span class="eyebrow">Weddings and keepsakes</span>
-          <h1 class="hero-title">Meaningful jewellery moments for wedding celebrations</h1>
-          <p class="lead">Create a premium keepsake experience for bridal parties, close family and guest moments.</p>
-          <div class="btn-group">
-            <a class="btn btn-primary" href="contact.html">Enquire for weddings</a>
-            <a class="btn btn-ghost" data-social-link="instagram" href="#">Message on Instagram</a>
-          </div>
-        </div>
-        <img class="about-photo" src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Wedding fair pop-up by Georgie" loading="lazy" decoding="async" width="900" height="760">
+      <div class="container hero-copy">
+        <span class="eyebrow">Policy</span>
+        <h1 class="hero-title">Privacy policy</h1>
+        <p class="lead">Last updated: 8 February 2026</p>
       </div>
     </section>
 
     <section class="section surface">
-      <div class="container grid grid-3">
+      <div class="container grid grid-2">
         <article class="card">
-          <h2>Bridal party fittings</h2>
-          <p class="muted">Plan a pre-wedding fitting for your closest people, with pieces selected to suit each style.</p>
+          <h2>Information collected</h2>
+          <ul class="info-list">
+            <li>Name, email address and optional phone number from the enquiry form.</li>
+            <li>Booking details you choose to include, such as service type and preferred dates.</li>
+            <li>Messages sent directly through linked social channels.</li>
+          </ul>
         </article>
         <article class="card">
-          <h2>Guest keepsake station</h2>
-          <p class="muted">Add a dedicated jewellery moment to your event flow for meaningful keepsakes.</p>
+          <h2>How it is used</h2>
+          <ul class="info-list">
+            <li>To respond to your enquiry and arrange appointments.</li>
+            <li>To manage pop-up, event and wedding booking requests.</li>
+            <li>To provide practical booking updates and service information.</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container grid grid-2">
+        <article class="card">
+          <h2>Third-party services</h2>
+          <p class="muted">Form submissions are processed via Formspree. Embedded social content is provided by Instagram and TikTok when loaded on-page. These platforms operate under their own privacy terms.</p>
         </article>
         <article class="card">
-          <h2>Tailored enquiry process</h2>
-          <p class="muted">Share your date range, guest size and setting to receive bespoke recommendations.</p>
+          <h2>Storage and retention</h2>
+          <p class="muted">Enquiry information is retained only for as long as needed to manage bookings, aftercare follow-up, and business record-keeping obligations.</p>
         </article>
+      </div>
+    </section>
+
+    <section class="section surface">
+      <div class="container card">
+        <h2>Your rights and contact</h2>
+        <p class="muted">You can request access, correction or deletion of your personal information at any time.</p>
+        <p>
+          <a href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a><br>
+          <a href="tel:+447361497192">07361 497192</a>
+        </p>
       </div>
     </section>
   </main>
 
-    <footer class="footer">
+  <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
@@ -132,9 +155,4 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
-
-
-
-
-
 
