--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <meta property="og:description" content="A curated gallery of nail sets, welded jewellery fittings, events and keepsake moments.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg">
-  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -40,13 +40,16 @@
         </div>
       </nav>
 
-      <div class="header-meta">
+            <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
           <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
           <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
         <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
@@ -70,7 +73,7 @@
           <button class="filter-btn" type="button" role="tab" data-filter-btn="nails" aria-selected="false">Nails</button>
           <button class="filter-btn" type="button" role="tab" data-filter-btn="jewellery" aria-selected="false">Jewellery</button>
         </div>
-        <p class="muted" data-gallery-count>28 pieces shown</p>
+        <p class="muted" data-gallery-count>44 pieces shown</p>
 
         <div id="portfolio-grid" class="gallery-grid" aria-live="polite">
           <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Blue extension nails"><img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Blue extension nails" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
@@ -87,6 +90,14 @@
           <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Brown cherry nails"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Brown cherry nails" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
           <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" data-alt="Brown cherry nails close-up"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt2.jpg" alt="Brown cherry nails close-up" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
           <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Green%20star%20nails.jpg" data-alt="Green star nails"><img src="assets/images/Nails/Green%20star%20nails.jpg" alt="Green star nails" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Blood%20nails%20pt1.jpg" data-alt="Blood red nail art detail"><img src="assets/images/Nails/Blood%20nails%20pt1.jpg" alt="Blood red nail art detail" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Blood%20nails%20pt2.jpg" data-alt="Blood red nail art close-up"><img src="assets/images/Nails/Blood%20nails%20pt2.jpg" alt="Blood red nail art close-up" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Pink%20sparkley%20nails.jpg" data-alt="Pink sparkle nails"><img src="assets/images/Nails/Pink%20sparkley%20nails.jpg" alt="Pink sparkle nails" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Holly%20christmas%20nails.jpg" data-alt="Holly Christmas nail art"><img src="assets/images/Nails/Holly%20christmas%20nails.jpg" alt="Holly Christmas nail art" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Holly%20nail%20on%20extension.jpg" data-alt="Holly nail detail on extension"><img src="assets/images/Nails/Holly%20nail%20on%20extension.jpg" alt="Holly nail detail on extension" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Red%20flower%20nails.jpg" data-alt="Red flower nail design"><img src="assets/images/Nails/Red%20flower%20nails.jpg" alt="Red flower nail design" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Red%20nails%20with%20white%20heart.jpg" data-alt="Red nails with white heart detail"><img src="assets/images/Nails/Red%20nails%20with%20white%20heart.jpg" alt="Red nails with white heart detail" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="nails" data-lightbox="assets/images/Nails/Cartoon%20nails%20from%20far%20away.jpg" data-alt="Cartoon nails from distance"><img src="assets/images/Nails/Cartoon%20nails%20from%20far%20away.jpg" alt="Cartoon nails from distance" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Nails</span></button>
 
           <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg" data-alt="Blue and gold bracelet"><img src="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg" alt="Blue and gold bracelet" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
           <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Blue%20bracelet%20%26%20charm.jpg" data-alt="Blue bracelet with charm"><img src="assets/images/Jewellery/Blue%20bracelet%20%26%20charm.jpg" alt="Blue bracelet with charm" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
@@ -102,17 +113,25 @@
           <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Gold%20pearl%20anklet.jpg" data-alt="Gold pearl anklet"><img src="assets/images/Jewellery/Gold%20pearl%20anklet.jpg" alt="Gold pearl anklet" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
           <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" data-alt="Urban Outfitters pop-up setup"><img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Urban Outfitters pop-up setup" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
           <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" data-alt="Wedding fair pop-up"><img src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Wedding fair pop-up" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Georgie%20bracelet%20with%20charm.jpg" data-alt="Bracelet detail in studio"><img src="assets/images/Jewellery/Georgie%20bracelet%20with%20charm.jpg" alt="Bracelet detail in studio" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Heart%20charm.jpg" data-alt="Heart charm detail"><img src="assets/images/Jewellery/Heart%20charm.jpg" alt="Heart charm detail" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/M%20charm.jpg" data-alt="Initial charm detail"><img src="assets/images/Jewellery/M%20charm.jpg" alt="Initial charm detail" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Emerlad%20connector.jpg" data-alt="Emerald connector detail"><img src="assets/images/Jewellery/Emerlad%20connector.jpg" alt="Emerald connector detail" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Men%20with%20bracelet%20peaks%20background.jpg" data-alt="Bracelet fit on wrist"><img src="assets/images/Jewellery/Men%20with%20bracelet%20peaks%20background.jpg" alt="Bracelet fit on wrist" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Pearl%20chain%20on%20white%20background.jpg" data-alt="Pearl chain on white backdrop"><img src="assets/images/Jewellery/Pearl%20chain%20on%20white%20background.jpg" alt="Pearl chain on white backdrop" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Silver%20twist%20chain%20with%20mirror%20background.jpg" data-alt="Silver twist chain on mirror"><img src="assets/images/Jewellery/Silver%20twist%20chain%20with%20mirror%20background.jpg" alt="Silver twist chain on mirror" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
+          <button class="gallery-tile" type="button" data-gallery-item data-category="jewellery" data-lightbox="assets/images/Jewellery/Joe%20gold%20twist%20chain.jpg" data-alt="Gold twist chain close-up"><img src="assets/images/Jewellery/Joe%20gold%20twist%20chain.jpg" alt="Gold twist chain close-up" loading="lazy" decoding="async" width="900" height="900"><span class="gallery-caption">Jewellery</span></button>
         </div>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
         <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
-        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <address data-location-text>Base: 15 Young Street, Cheadle. Georgie travels for pop-ups and may be coming to your area soon.</address>
         <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
@@ -124,20 +143,24 @@
         <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Service links</strong>
+        <strong>Services</strong>
         <a href="nails.html#biab">BIAB</a>
         <a href="nails.html#gel-polish">Gel Polish</a>
         <a href="nails.html#gel-extensions">Gel Extensions</a>
-        <a href="jewellery.html#bracelets">Bracelets</a>
-        <a href="jewellery.html#events">Pop-ups and events</a>
+        <a href="jewellery.html#bracelets">Welded Bracelet</a>
+        <a href="jewellery.html#anklets">Welded Anklet</a>
+        <a href="jewellery.html#rings">Welded Ring</a>
       </div>
       <div class="footer-links">
-        <strong>Social</strong>
+        <strong>Policies and social</strong>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="cookies.html">Cookies Policy</a>
+        <a href="accessibility.html">Accessibility</a>
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
-        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
-        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
+        <a data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
   </footer>
@@ -146,3 +169,9 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
