--- a/nails.html
+++ b/nails.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Book BIAB, gel polish and gel extensions with a refined, detail-led approach.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Nails/Blue%20Extensions.jpg">
-  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -40,13 +40,16 @@
         </div>
       </nav>
 
-      <div class="header-meta">
+            <div class="header-meta">
         <div class="social-inline" aria-label="Social links">
           <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
           </a>
           <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="tiktok" href="#" aria-label="TikTok">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M19.59 6.69a4.83 4.83 0 0 1-3.77-1.73v8.13a7.06 7.06 0 1 1-6.1-7 6.8 6.8 0 0 1 1.34.13v3.09a3.86 3.86 0 1 0 2.65 3.67V1.5h2.96a4.84 4.84 0 0 0 2.92 4.43Z"/></svg>
           </a>
         </div>
         <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
@@ -167,7 +170,6 @@
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Red nails with snowflake detail"><img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Red nails with snowflake detail" loading="lazy" decoding="async" width="900" height="1120"></button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Strawberry inspired nail art"><img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Strawberry inspired nail art" loading="lazy" decoding="async" width="900" height="1120"></button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20plain.jpg" data-alt="Plain red gel nails"><img src="assets/images/Nails/Red%20nails%20plain.jpg" alt="Plain red gel nails" loading="lazy" decoding="async" width="900" height="1120"></button>
-          <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20nails%20with%20cherry.jpg" data-alt="Pink nails with cherry art"><img src="assets/images/Nails/Pink%20nails%20with%20cherry.jpg" alt="Pink nails with cherry art" loading="lazy" decoding="async" width="900" height="1120"></button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" data-alt="Pink cherry nails alternate angle"><img src="assets/images/Nails/Pink%20nails%20with%20cherry%20pt1.jpg" alt="Pink cherry nails alternate angle" loading="lazy" decoding="async" width="900" height="1120"></button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Plain%20red%20nails%20square.jpeg" data-alt="Square red nails"><img src="assets/images/Nails/Plain%20red%20nails%20square.jpeg" alt="Square red nails" loading="lazy" decoding="async" width="900" height="1120"></button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" data-alt="Brown cherry nails"><img src="assets/images/Nails/Brown%20nails%20with%20cherry%20pt1.jpg" alt="Brown cherry nails" loading="lazy" decoding="async" width="900" height="1120"></button>
@@ -179,15 +181,36 @@
     </section>
 
     <section class="section surface">
-      <div class="container testimonial-wrap" data-testimonials="nails" data-limit="5">
+      <div class="container testimonial-wrap">
         <div class="testimonial-controls">
           <div>
-            <h2 class="section-title">Nail client reviews</h2>
-            <p class="section-intro">A snapshot of feedback from nail appointments.</p>
+            <h2 class="section-title">Client feedback</h2>
+            <p class="section-intro">New nail service &mdash; formal Google reviews are coming soon.</p>
           </div>
-          <a class="btn btn-ghost" data-google-reviews-link href="https://share.google/EBIZEN8UOwQqzRysz">Read more reviews on Google</a>
         </div>
-        <div class="testimonials-grid" data-testimonial-list></div>
+        <div class="testimonials-grid">
+          <article class="testimonial-card">
+            <p class="review-text">"Such a calm appointment and my nails looked tidy and fresh straight away."</p>
+            <div class="review-meta">
+              <span><strong>Client</strong></span>
+              <span class="review-source">In-salon feedback</span>
+            </div>
+          </article>
+          <article class="testimonial-card">
+            <p class="review-text">"I loved how much care was taken with shape and detail before I left."</p>
+            <div class="review-meta">
+              <span><strong>Returning client</strong></span>
+              <span class="review-source">In-salon feedback</span>
+            </div>
+          </article>
+          <article class="testimonial-card">
+            <p class="review-text">"Really friendly service and a finish that still looked great weeks later."</p>
+            <div class="review-meta">
+              <span><strong>Client</strong></span>
+              <span class="review-source">In-salon feedback</span>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
@@ -234,12 +257,12 @@
     </section>
   </main>
 
-  <footer class="footer">
+    <footer class="footer">
     <div class="container footer-grid">
       <div>
         <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
         <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
-        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <address data-location-text>Base: 15 Young Street, Cheadle. Georgie travels for pop-ups and may be coming to your area soon.</address>
         <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
@@ -251,20 +274,24 @@
         <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Service links</strong>
+        <strong>Services</strong>
         <a href="nails.html#biab">BIAB</a>
         <a href="nails.html#gel-polish">Gel Polish</a>
         <a href="nails.html#gel-extensions">Gel Extensions</a>
-        <a href="jewellery.html#bracelets">Bracelets</a>
-        <a href="jewellery.html#events">Pop-ups and events</a>
+        <a href="jewellery.html#bracelets">Welded Bracelet</a>
+        <a href="jewellery.html#anklets">Welded Anklet</a>
+        <a href="jewellery.html#rings">Welded Ring</a>
       </div>
       <div class="footer-links">
-        <strong>Social</strong>
+        <strong>Policies and social</strong>
+        <a href="privacy.html">Privacy Policy</a>
+        <a href="cookies.html">Cookies Policy</a>
+        <a href="accessibility.html">Accessibility</a>
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
-        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
-        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
+        <a data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
   </footer>
@@ -273,3 +300,9 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
+
+
+
+
