--- a/nails.html
+++ b/nails.html
@@ -10,6 +10,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Nails/Blue%20Extensions.jpg">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
+  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -300,6 +302,8 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
 
 
 
