--- a/weddings.html
+++ b/weddings.html
@@ -10,6 +10,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
+  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -132,6 +134,8 @@
   <script src="assets/main.js" defer></script>
 </body>
 </html>
+
+
 
 
 
